--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,15 @@
     .hide{
         display: none !important;
     }
+
+
+    .kylexy{
+        height: 23px;
+        width: 300px;
+        margin: 0;
+    }
+
+    .kylexy img{
+        margin: 0;
+        object-fit: contain !important;
+    }
